--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -2,10 +2,48 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
+
+}
+img{
+    width:40%;
+    float:left;
+}
+
+.text-dark {
+    font-family: Consolas;
+    position: relative;
+    text-decoration: none;
+    color: #333;
+    
+}
+
+ .text-dark::before {
+     content: "";
+     position: absolute;
+     width: 100%;
+     height: 2px;
+     bottom: 0;
+     left: 0;
+     background-color: #5dbb63;
+     visibility: hidden;
+     transform: scaleX(0);
+     transition: all 0.2s ease-in-out 0s;
+  }
+ 
+ .text-dark:hover::before {
+     visibility: visible;
+     transform: scaleX(1);
+   }
+.nav-item {
+    padding-right: 15px;
+    font-size: 18px;
+}
+.navbar-nav{
+    margin-right:150px;
 }
 
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 @media (min-width: 768px) {
   html {
