--- a/ClientApp/src/components/Home.css
+++ b/ClientApp/src/components/Home.css
@@ -1,4 +1,48 @@
 ﻿body {
     background-color: white;
 }
+ video{
+     width:100%;
+     height:35rem;
+     z-index:-1;
+     opacity:0.8;
+ }
+.home-container {
+    height:100vh;
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    object-fit:contain;
+}
+.home-container > h1{
+    margin-top:-350px;
+    font-family:
+}
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+span {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 4rem;
+    color: antiquewhite;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%,-50%);
+    background-image: linear-gradient(rgb(151, 222, 151),rgb(151, 222, 151));
+    background-size: 100% 10px;
+    background-repeat: no-repeat;
+    background-position: 100% 0%;
+    transition: background-size .7s, background-position .5s ease-in-out;
+}
+
+    span:hover {
+        background-size: 100% 100%;
+        background-position: 0% 100%;
+        transition: background-position .7s, background-size .5s ease-in-out;
+    }
+    .home-container > p{
+        font-size:25px;
+       color:antiquewhite;
+       font-family:SansSerif;
+    }
