--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -17,18 +17,18 @@ img{
     
 }
 
- .text-dark::before {
-     content: "";
-     position: absolute;
-     width: 100%;
-     height: 2px;
-     bottom: 0;
-     left: 0;
-     background-color: #5dbb63;
-     visibility: hidden;
-     transform: scaleX(0);
-     transition: all 0.2s ease-in-out 0s;
-  }
+    .text-dark::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: rgb(151, 222, 151);
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.2s ease-in-out 0s;
+    }
  
  .text-dark:hover::before {
      visibility: visible;
