--- a/ClientApp/src/components/aboutus.css
+++ b/ClientApp/src/components/aboutus.css
@@ -1,9 +1,9 @@
 ﻿#aboutusvid {
     opacity: 1;
-    width: 1355px;
+    width: 1353px;
     margin-left: -120px;
     margin-top: -15px;
-    height: 100%;
+    height: 120%;
 }
 @font-face {
     font-family: 'sequel 85';
@@ -32,53 +32,89 @@
     cursor:pointer;
 }
 
-.container-aboutus {
-    position: relative;
-    display: inline-block;
+.card-container{
+    display: flex;
+    justify-content: center;
+    width: 1355px;
+    margin-left: -120px;
+    margin-top: 60px;
+    
+}
+.card-aboutus{
+    text-align: center;
+    padding: 50px;
+    margin-top: 5px;
+    border: none;
+    width: 40%;
+    border-radius: none;
+    height: 600px;
+
+}
+.card-aboutus img{
+    width: 90px;
+    margin-left: 140px;
+    
+}
+.card-aboutus h3{
+    font-size: 18px; 
+    font-family: "helvetica";
+    font-weight: 500; 
+    margin-top: 80px; 
+}
+.card-aboutus h2{
+    font-family: "sequel 85";
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
-.overlay {
+#doctor h1{
+    font-family: "sequel 85";
+    margin-top: 50px;
+    margin-bottom: 40px;
+    font-size: 26px;
+    
+}
+#doctor-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.doctor-card{
+    padding: 30px;
+}
+.doctor-card img{
+    width: 90px;
+}
+.doctor-card h3{
+    padding-left: 100px;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium';
+}
+#gallery #background{
+    width: 1350px;
+    margin-left: -120px;
+    margin-top: -23px;
+}
+
+#gallery {
+    position: relative;
+  }
+  
+  #gallery-img {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 0;
-    transition: opacity 0.3s;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    width: 1355px;
-    height: 100px;
-    margin-left: -120px;
-    margin-top: -16px;
-    height:110px;
-}
-.overlay h2{
-    font-size:15px;
-    font-family:'Segoe UI';
-}
-.container-aboutus:hover .overlay {
-    opacity: 1;
-}
 
-.vision {
+  }
+  
+  #gallery-img img {
+    position: relative;
     display: block;
-    width: 1355px;
-    height: 140px;
-    background-color:#5dbb63;
-    margin-left:-120px;
-    margin-top:-16px;
-}
-
-.vision h1{
-    font-family:'sequel 85';
-    color:white;
-    padding-left:50px;
-    letter-spacing:10px;
-    padding-top:20px;
-}
-
-
+    width: 26%;
+    margin-top: 60px;
+    padding-left: 10px;
+    margin-left: 50px;
+  }
+  
