--- a/ClientApp/src/components/Home.css
+++ b/ClientApp/src/components/Home.css
@@ -3,8 +3,9 @@
  
 }
 video {
-    width: 100%;
-    height: 40rem;
+    margin-top:-1.2%;
+    width: 115%;
+    height: 50rem;
     z-index: -1;
     filter: brightness(60%);
     opacity: 0.7;
@@ -20,7 +21,7 @@ video {
     object-fit:contain;
 }
 .home-container > h1{
-    margin-top:-340px;
+    margin-top:-420px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 .rise {
@@ -28,7 +29,7 @@ video {
 }
 span {
     font-family: 'Bebas Neue', cursive;
-    font-size: 4rem;
+    font-size: 5rem;
     color: white;
     top: 50%;
     left: 50%;
@@ -47,30 +48,33 @@ span {
         transition: background-position .7s, background-size .5s ease-in-out;
     }
     .home-container > p{
-        font-size:25px;
+        font-size:27px;
        color:white;
        font-family:SansSerif;
     }
-.body-card{
-    margin-top:-4.3%;
-    margin-left:-0.9%;
-}
 
+.body-card {
+    position: absolute;
+    margin-top: 51.63%;
+    margin-left:-7%;
+
+}
 .container {
     display: flex;
-    flex-wrap:wrap;
-    justify-content:space-between;
-    
-    
+    flex-wrap: wrap;
+   justify-content:space-between;
+   padding:0px;
 }
 
 .card {
     position: relative;
-  margin-right:20px;
-    width: 300px;
-    height: 370px;
+   margin-left:0;
+   margin-right:-15.5%;
+  
+   padding:0%;
+    width: 370px;
+    height: 390px;
     transition: 0.3s ease-out;
-   
 }
 
 .card .imgbox{
@@ -80,20 +84,17 @@ span {
     height:100%;
 }
 .card .imgbox img{
-    object-fit:fill;
-    top:0;
-    left:0;
     width:100%;
     height:80%;
+
     display:block;
     transition:0.5s;
 }
     .card .content {
         position: absolute;
-        left: 0;
         bottom: 0;
         width: 100%;
-        height: 100px;
+        height: 80px;
         padding: 12px;
         background: rgb(175, 226, 243);
         transition: all 0.5s cubic-bezier(.48, -0.28, 0.41, 1.4);
@@ -109,3 +110,23 @@ span {
         opacity:0.9;
 
     }
+    .content p{
+        margin:10px 0 0;
+        padding: 1em 1em;
+        transform:translateY(2em);
+        line-height:1.3em;
+        transition:0.3s;
+        text-align:justify;
+      
+    }
+.card:hover .content p{
+    transform:translateY(0);
+   
+}
+
+.content h2{
+    text-align:center;
+}
+.card:hover{
+    box-shadow: 0 0 5em rgba(0,0,0,0.4);
+}
