--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -14,6 +14,7 @@ img{
     position: relative;
     text-decoration: none;
     color: #333;
+    font-size:19px;
     
 }
 
@@ -39,7 +40,7 @@ img{
     font-size: 18px;
 }
 .navbar-nav{
-    margin-right:150px;
+    margin-right:10px;
 }
 
 html {
