Shtimi fillestar i stafit ne aboutus page

--- a/ClientApp/src/components/aboutus.css
+++ b/ClientApp/src/components/aboutus.css
@@ -3,7 +3,7 @@
     width: 1353px;
     margin-left: -120px;
     margin-top: -15px;
-    height: 120%;
+    height: 140%;
 }
 
 @font-face {
@@ -38,7 +38,7 @@
     justify-content: center;
     width: 1355px;
     margin-left: -120px;
-    margin-top: 60px;
+    margin-top: -10px;
     
 }
 .card-aboutus{
@@ -118,4 +118,26 @@
     padding-left: 10px;
     margin-left: 50px;
   }
+  .staff-container >h1{
+      text-align: center;
+      font-family: "sequel 85";
+       margin-bottom: 50px;
+      
+  }
+.staff-row {
+    border-bottom: 1px solid lightgrey;
+    height: 240px;
+    padding: 20px;
+}
+    .staff-row:hover {
+        box-shadow: -5px 0px 5px -2px lightgrey, 5px 0px 5px -2px lightgrey, 0px 10px 10px -5px lightgrey;
+    }
+  .staff-image img{
+      width:200px;
+      border-radius: 100%;
+      margin-right: 100px;
+  }
+  
+  
+  
   
