--- a/ClientApp/src/components/sherbimet.css
+++ b/ClientApp/src/components/sherbimet.css
@@ -24,9 +24,7 @@
 		font-weight: 900;
 	}
 
-	.intro{
-		bottom:240px;
-	}
+	
 
 .slider {
 	width: 2000px;
@@ -140,6 +138,7 @@
 	width: 90%;
 	float: left;
 	margin-left: 50px;
+
 }
 
 	.content h1 {
@@ -147,6 +146,7 @@
 		font-family: 'Lucida Calligraphy';
 		letter-spacing: 3.5px;
 		margin-top: 25px;
+		margin-left: -92px;
 		color: cornflowerblue;
 	}
 
@@ -156,32 +156,56 @@
 		color: lightblue;
 		margin-top: -10px;
 		margin-bottom:-40px;
+		margin-left:-120px;
 	}
 
 	.content p {
 		font-family: serif;
-		margin-top: 5px;
+		margin-top: -4px;
 		text-align: justify;
 		font-size: 16px;
 		line-height: 1.5;
-		
+	
 	}
 /*responsive*/
 @media screen and (max-width: 768px) {
 	.image-section {
-		width: 30%;
-		float: left;
+		width: 100%;
+		float: none;
 	}
+
+	.content{
+		width: 100%;
+		float: none;
+		margin-left: 0px;
+	}
+
+		.content h1 {
+			font-size: 60px;
+			letter-spacing: 2px;
+			margin-top: 30px;
+			
+		}
+
+		.content h2 {
+			font-size: 30px;
+		
+		}
+
+		.content p {
+			font-size: 18px;
+		
+		}
 }
 
 
 /*cards*/
 
-.card {
+.card-sherbimet{
 	background: #fff;
 	width: 250px;
 	margin: 20px;
-	margin-top:-80px;
+	
 	box-shadow: 0px 0px 20px rgba(0,0,0,0.05);
 	box-sizing: border-box;
 	padding: 20px;
@@ -189,7 +213,7 @@
 	transition: transform 0.2s ease-in-out;
 }
 
-	.card:hover {
+	.card-sherbimet:hover {
 		box-shadow: 2px 2px 10px black;
 		transform: translateY(-10px);
 	}
