--- a/ClientApp/src/components/Home.css
+++ b/ClientApp/src/components/Home.css
@@ -1,34 +1,30 @@
 ﻿body {
     background-color: white;
-    height:100vh;
-    width:100%;
 }
 video {
-    margin-top:-1.2%;
+    margin-top: -1.2%;
     width: 117%;
     height: 50rem;
     z-index: -1;
     filter: brightness(60%);
     opacity: 0.7;
     object-fit: fill;
-    padding:0px;
+    padding: 0px;
 }
 
 .home-container {
-    height:100vh;
-    width:100%;
-    display:flex;
-    flex-direction:column;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    object-fit:contain;
+    object-fit:fill;
 }
 .home-container > h1{
     margin-top:-420px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-.rise {
-    color: rgb(230, 230, 119);
-}
+
 span {
     font-family: 'Bebas Neue', cursive;
     font-size: 5rem;
@@ -64,8 +60,8 @@ span {
 .container-home {
     display: flex;
     flex-wrap: wrap;
-    justify-content: ;
     
+    overflow-y: hidden;
 }
 
 .card-home {
@@ -130,3 +126,35 @@ span {
 .card-home:hover{
     box-shadow: 0 0 5em rgba(0,0,0,0.4);
 }
+
+.all-buttons {
+    text-align: center;
+    margin-top: 32%;
+    margin-left: -18%;
+}
+.container-button {
+    width: 160px;
+    padding-top: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-inline-start:190px;
+    
+    cursor: pointer;
+    display: inline-block;
+}
+.button-1 {
+    padding-top:30px;
+    background-color: transparent;
+    border: 4px solid white;
+    color: navy;
+    transition:0.3s ease-out;
+    box-sizing:content-box;
+    height:60px;
+    width:230px;
+}
+
+    .button-1:hover {
+        box-shadow:0 0 5em rgb(175, 226, 243);
+    }
