Bug fixes + changes in file names

--- a/ClientApp/src/components/aboutus.css
+++ b/ClientApp/src/components/aboutus.css
@@ -1,4 +1,4 @@
-﻿#aboutusvid {
+﻿#aboutusvid{
     opacity: 1;
     width: 1353px;
     margin-left: -120px;
@@ -13,24 +13,24 @@
     font-style: normal;
 }
 
-.aboutus h2 {
+.aboutus #sunriseabout {
     font-family: 'sequel 85';
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    color:white;
-    text-shadow:1px 1px 6px black;
+    color: white;
+    text-shadow: 1px 1px 6px black;
 }
-.aboutus img {
+.aboutus #scrollimg {
     position: absolute;
     top: 64%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    width:90px;
-    cursor:pointer;
+    width: 90px;
+    cursor: pointer;
 }
 
 .card-container{
@@ -138,7 +138,8 @@
       border-radius: 100%;
       margin-right: 100px;
   }
-  
+
+
   
   
   
