--- a/ClientApp/src/components/contact.css
+++ b/ClientApp/src/components/contact.css
@@ -50,13 +50,12 @@ form {
 	background-color: lightblue;
 }
 
-<<<<<<< HEAD
+
 .contact-form > h2 {
 	color: white;
-=======
+}
 #contactush2 {
 	color: #fff;
->>>>>>> 81d12bc4ec56de8d7dbf7758d835483d79daa290
 	font-weight: 500;
 	font-size: 1.5rem;
 	line-height: 1;
