--- a/ClientApp/src/components/aboutus.css
+++ b/ClientApp/src/components/aboutus.css
@@ -108,15 +108,20 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
   
-  .gallery-img img {
+ .gallery-img img {
     position: relative;
     display: block;
-    width: 300px;
-    margin-top: 60px;
-    padding-left: 10px;
-    margin-left: 100px;
+    width: 340px;
+    padding-left: 50px;
+    padding-top: 50px;
+
   }
     
   .staff-container >h1{
