bug fixes te sherbimet

--- a/ClientApp/src/components/contact.css
+++ b/ClientApp/src/components/contact.css
@@ -155,7 +155,7 @@ form {
 	margin-bottom: 0.9rem;
 }
 
-.title {
+.title-contact {
 	color: rgb(115, 203, 232);
 	font-weight: 500;
 	font-size: 1.5rem;
