--- a/ClientApp/src/components/sherbimet.css
+++ b/ClientApp/src/components/sherbimet.css
@@ -1,51 +1,51 @@
 
 
-.sherbimet-container > h1 {
+.sherbimet-container  h1 {
 	color: #004526;
 	text-align: center;
 	/*background-image: url('photosherbimet/sherbimi.jpg');*/
-	background-color: lightblue ;
+	background-color: lightblue;
 	font-family: 'Lucida Console';
 	font-size: 30px;
 	padding: 10px;
-	margin: 0 -120px;
+	margin: 0 -12px;
 	margin-top: -15px;
 	cursor: pointer;
 	font-weight: 300;
 	transition: font-weight 250ms ease-in-out;
 }
 
-	.sherbimet-container > h1:hover {
+	.sherbimet-container  h1:hover {
 		font-weight: 900;
 	}
 
-	
 
-.slider {
-	width: 2000px;
-	height: 500px;
-	background: url('photos/anesthesia.jpg');
+
+.slider-sherbimet {
+	width: 1627px;
+	height: 520px;
+	background: url('photos/staf.jpg');
 	margin: 100px auto;
 	margin-left: -120px;
 	margin-top: 0px;
-	animation: slide 10s infinite;
+	animation: slide 7s infinite;
 }
 
 @keyframes slide {
 	25% {
-		background: url('photos/staf.jpg');
+		background: url('photos/slide5.jpg');
 	}
 
 	50% {
-		background: url('photos/checkup.jpg');
+		background: url('photos/test1.jpg');
 	}
 
 	75% {
 		background: url('photos/lab.jpg');
 	}
 
-	100% {
-		background: url('photos/radiology.jpg');
+	85% {
+		background: url('photos/pillsss.jpg');
 	}
 }
 
@@ -53,9 +53,9 @@
 	text-align: center;
 	font-size: 25px;
 	font-family: 'Lucida Handwriting';
-	background-color:  lightblue ;
+	background-color: lightblue;
 	padding: 3px;
-	margin-top: -80px;
+	margin-top: -60px;
 	border: 2px solid #333333;
 	animation: border-animation 2s linear infinite;
 	margin-bottom: 20px;
@@ -121,6 +121,7 @@
 .image-section {
 	float: left;
 	width: 8000%;
+	margin-left: 50px;
 }
 
 	.image-section img {
@@ -129,38 +130,36 @@
 	}
 
 
-.content {
+.content-sherbimet {
 	width: 90%;
 	float: left;
 	margin-left: 50px;
-
 }
 
-	.content h1 {
+	.content-sherbimet h1 {
 		font-size: 47px;
 		font-family: 'Lucida Calligraphy';
 		letter-spacing: 3.5px;
 		margin-top: 25px;
-		margin-left: -92px;
+		margin-left: -57px;
 		color: cornflowerblue;
 	}
 
-	.content h2 {
+	.content-sherbimet h2 {
 		font-size: 40px;
 		font-family: sans-serif;
 		color: lightblue;
 		margin-top: -10px;
-		margin-bottom:-40px;
-		margin-left:-120px;
+		margin-bottom: -40px;
+		margin-left: 120px;
 	}
 
-	.content p {
+	.content-sherbimet p {
 		font-family: serif;
-		margin-top: -4px;
+		margin-top: 50px;
 		text-align: justify;
 		font-size: 16px;
 		line-height: 1.5;
-	
 	}
 /*responsive*/
 @media screen and (max-width: 768px) {
@@ -169,55 +168,53 @@
 		float: none;
 	}
 
-	.content{
+	.content-sherbimet {
 		width: 100%;
 		float: none;
 		margin-left: 0px;
 	}
 
-		.content h1 {
+		.content-sherbimet h1 {
 			font-size: 60px;
 			letter-spacing: 2px;
 			margin-top: 30px;
-			
 		}
 
-		.content h2 {
+		.content-sherbimet h2 {
 			font-size: 30px;
-		
 		}
 
-		.content p {
+		.content-sherbimet p {
 			font-size: 18px;
-		
 		}
 }
 
 
 /*cards*/
 
-.card-sherbimet{
+
+.card-sherbimet {
 	background: #fff;
-	width: 250px;
+	width: 300px;
 	margin: 20px;
-	
-	box-shadow: 0px 0px 20px rgba(0,0,0,0.05);
+	box-shadow: 0px 0px 15px #1ca9c9;
 	box-sizing: border-box;
-	padding: 20px;
+	padding: 28px;
 	border-radius: 5px;
 	transition: transform 0.2s ease-in-out;
 }
 
 	.card-sherbimet:hover {
-		box-shadow: 2px 2px 10px black;
+		box-shadow: 3px 3px 18px #A4DDED;
 		transform: translateY(-10px);
 	}
 
-.flexbox {
+.flexbox-sherbimet{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	align-items: center;
+	margin-top: -70px;
 }
 
 .img img {
@@ -241,14 +238,37 @@
 	color: white;
 }
 
-a {
-	display: inline-block;
-	text-decoration: none;
-	font-size: 14px;
-	margin-top: 10px;
+
+.service-toggle {
+	background-color: #007bff;
+	color: white;
+	border: none;
+	padding: 5px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+	cursor: pointer;
+	width: 100%;
+	max-width: 200px;
 }
 
+	.service-toggle:hover {
+		background-color: #0069d9;
+	}
 
-	a:hover {
-		color: lightgreen;
+.service-content {
+	height: 0;
+	overflow: hidden;
+	transition: height 0.3s ease-out;
+}
+
+	.service-content.open {
+		height: auto;
+		padding: 10px;
+		margin-top: 10px;
+	}
+
+	.service-content p {
+		text-align: left;
+		word-spacing: 4px;
+		font-size: 15px;
 	}
