login&signup forma, e paperfunduar, ka nevoj edhe per pak editim

--- a/ClientApp/src/components/contact.css
+++ b/ClientApp/src/components/contact.css
@@ -110,13 +110,13 @@ form {
 		color: #fff;
 	}
 
-.Login {
+.Login-butoni {
 	font-size: 0.8rem;
 	margin-top: 0.5rem;
 	color: white;
 }
 
-	.Login a {
+	.Login-butoni a {
 		color: #555;
 		text-decoration: none;
 	}
