--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -1,211 +1,98 @@
+.login-wraper{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.background-img-login{
+    background-image:
+    url('C:\Users\fursine\Desktop\lab1\Hospital-System-Management\ClientApp\public\login-forma.jpg');
+    height: 30rem;
+    padding: 2rem 0 35rem 0;
+    margin-top: -0.1rem;
+}
 
-.loginform {
+.login-form{
+    margin-left: 35rem;
+    margin-top: 3.5rem;
     position: relative;
     width: 100%;
-    min-height: 100vh;
-    background-color: #fff;
-    overflow: hidden;
+    max-width: 380px;
+    padding: 80px 40px 40px;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 10px 8px 25px rgba(0, 0, 0, 0.7);
 }
-
-.loginform:before {
+.login-form::before{
     content: '';
     position: absolute;
-    width: 2000px;
-    height: 2000px;
-    border-radius: 50%;
-    background: linear-gradient(-45deg, #4481eb, #04befe);
-    top: -10%;
-    right: 48%;
-    transform: translateY(-50%);
-    z-index: 6;
-}
-
-.loginbody {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
-}
-
-.signin-signup {
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
     width: 50%;
-    display: grid;
-    grid-template-columns: 1fr;
-    z-index: 5;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.08);
+    transform: skewX(-26deg);
+    transform-origin: bottom left;
+    border-radius: 10px;
+    pointer-events: none;
+}
+.login-form img{
+    position: absolute;
+    top: 15px;
+    left: calc(50% - 9%);
+    width: 65px;
+    border-radius: 50%;
+}
+.h2-login{
+    text-align: center;
+    letter-spacing: 1px;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    color: rgb(42, 112, 162);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.field-login {
+	position: relative;
+	margin: 1rem 0;
+	width: 100%;
+	outline: none;
+	border: 2px solid #fafafa;
+	background: none;
+	padding: 0.6rem 1.2rem;
+	color: white;
+	font-weight: 500;
+	font-size: 0.95rem;
+	letter-spacing: 0.5px;
+	border-radius: 25px;
+	transition: 0.3s;
 }
 
-.form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 5rem;
-    overflow: hidden;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-}
+	.field-login:hover {
+		background-color: rgba(0, 0, 0, 0.1);
+	}
 
-    .form.sign-in-form {
-        z-index: 2;
-    }
-
-    .form.sign-up-form {
-        z-index: 1;
-        opacity: 0;
-    }
-
-.h2title {
-    font-size: 2.2rem;
-    color: #5e5e5e;
-    margin-bottom: 10px;
-}
-
-.input-field {
-    max-width: 380px;
-    width: 100%;
-    height: 55px;
-    background-color: #f0f0f0;
-    margin: 10px 0;
-    border-radius: 55px;
-    display: grid;
-    grid-template-columns: 15% 85%;
-    padding: 0.4rem;
-}
-
-    .input-field i {
-        text-align: center;
-        line-height: 45px;
-        color: #acacac;
-        font-size: 1.1rem;
-    }
-
-    .input-field input {
-        background: none;
-        outline: none;
-        border: none;
-        line-height: 1;
-        font-weight: 600;
-        font-size: 1.1rem;
-        color: #333;
-    }
-
-        .input-field input::placeholder {
-            color: #aaa;
-            font-weight: 500;
-        }
-
-.buttonlogin {
-    width: 150px;
-    height: 49px;
+.submit-btn-login{
+    display: block;
+    margin-left: 6.3rem;
     border: none;
     outline: none;
-    border-radius: 49px;
-    cursor: pointer;
-    background-color: #5995fd;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin: 10px 0;
-    transition: .5s;
-}
-
-    .buttonlogin:hover {
-        background-color: #4d84e2;
-    }
-
-.social-text {
-    padding: .7rem 0;
+    background: rgb(43, 144, 191);
+    border: 1px solid #fafafa;
     font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
 }
-
-.social-media-login {
-    display: flex;
-    justify-content: center;
-}
-
-.social-icons {
-    height: 46px;
-    width: 46px;
-    border: 1px solid #333;
-    margin: 0 0.45rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    font-size: 1.1rem;
-    border-radius: 50%;
-    transition: 0.3s;
-}
-
-    .social-icons:hover {
-        color: #4481eb;
-        border-color: #4481eb;
-    }
-
-.panels-container-login {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.panel {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-around;
-    text-align: center;
-    z-index: 7;
-}
-
-.left-panel {
-    pointer-events: all;
-    padding: 3rem 17% 2rem 12%;
-}
-
-.right-panel {
-    pointer-events: none;
-    padding: 3rem 12% 2rem 17%;
-}
-
-.panel .content-login {
+.submit-btn-login:hover {
+    background-color: transparent;
     color: #fff;
 }
-
-.h3-login {
-    font-weight: 600;
-    line-height: 1;
-    font-size: 1.5rem;
-}
-
-.panel p {
-    font-size: 0.95rem;
-    padding: 0.7rem 0;
-}
-
-.btn .transparent {
-    margin: 0;
-    background: none;
-    border: 2px solid #fff;
-    width: 130px;
-    height: 41px;
-    font-weight: 600;
-    font-size: 0.8rem;
-}
-
-.image-login {
-    width: 100%;
-}
-
-.right-panel .content-login, .right-panel .image-login {
-    transform: translateX(800px);
+.login-link{
+    margin-left: 3.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: -1rem;
 }
