--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -9,8 +9,9 @@
     background-image: url('photos/login-forma-color.jpg');
     padding: 2rem 0 35rem 0;
     margin-top: -0.1rem;
-    background-size: 100% 60%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
+    height: 110vh;
 }
 
 .login-form {
