--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -33,11 +33,13 @@ img{
         transform: scaleX(0);
         transition: all 0.2s ease-in-out 0s;
     }
- 
- .text-dark:hover::before {
-     visibility: visible;
-     transform: scaleX(1);
-   }
+
+    .text-dark:hover::before,
+    .text-dark.active::before { 
+        visibility: visible;
+        transform: scaleX(1);
+    }
+
 .nav-item {
     padding-right: 15px;
     font-size: 18px;
