--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -16,7 +16,7 @@
 
 .login-form {
     width: 50%;
-    margin: 0 auto;
+    margin: 150px auto;
     position: relative;
     width: 100%;
     max-width: 380px;
