--- a/ClientApp/src/components/Footer.css
+++ b/ClientApp/src/components/Footer.css
@@ -1,1 +1,16 @@
-﻿
+﻿.linksFooter:hover{
+    color:red;  
+}
+i:hover{
+    color:red;
+}
+i{
+    font-size:20px;
+}
+.originalPathFooter:hover{
+    color:red;
+}
+.row{
+    margin:0 auto;
+    padding-left:50px;
+}
