--- a/ClientApp/src/components/sherbimet.css
+++ b/ClientApp/src/components/sherbimet.css
@@ -8,11 +8,12 @@
 	font-family: 'Lucida Console';
 	font-size: 30px;
 	padding: 10px;
-	margin: 0 -12px;
+	
 	margin-top: -15px;
 	cursor: pointer;
 	font-weight: 300;
 	transition: font-weight 250ms ease-in-out;
+	width:100%;
 }
 
 	.sherbimet-container  h1:hover {
@@ -22,11 +23,10 @@
 
 
 .slider-sherbimet {
-	width: 1650;
+	width: 100%;
 	height: 520px;
 	background: url('photos/staf2.jpg');
 	margin: 100px auto;
-	margin-left: -120px;
 	margin-top: 0px;
 	animation: slide 6s infinite;
 }
