bug fixes ne home page

--- a/ClientApp/src/components/Home.css
+++ b/ClientApp/src/components/Home.css
@@ -67,8 +67,8 @@ span {
     position: relative;
     padding:0%;
    
-    width: 374px;
-    height: 400px;
+    width: 25%;
+    height: 26vw;
     transition: 0.3s ease-out;
 }
 
